# gitversion

./: Cargo.toml  GitVersion.yml  README.md  Taskfile.dist.yaml
src/: context.rs  extensions.rs  lib.rs  main.rs  prepare.rs  regex_patterns.rs
src/agents/: appveyor.rs  azure_pipelines.rs  bitbucket.rs  buildkite.rs  codebuild.rs  continua_ci.rs  drone.rs  envrun.rs  github_actions.rs  gitlab_ci.rs  jenkins.rs  local.rs  mod.rs  myget.rs  space_automation.rs  teamcity.rs  travis_ci.rs
src/calculation/: base_version.rs  effective_branch.rs  filters.rs  increment_strategy.rs  mod.rs  next_version.rs  tagged_semver_service.rs
src/calculation/deployment_mode/: continuous_delivery.rs  continuous_deployment.rs  manual.rs  mod.rs
src/calculation/strategies/: configured_next_version.rs  fallback.rs  merge_message.rs  mod.rs  tagged_commit.rs  track_release_branches.rs  version_in_branch_name.rs
src/config/: branch_config.rs  effective_config.rs  enums.rs  gitversion_config.rs  ignore_config.rs  mod.rs  prevent_increment.rs  provider.rs  workflows.rs
src/config/defaults/: gitflow.rs  githubflow.rs  mod.rs
src/git/: commit_filter.rs  merge_message.rs  mod.rs  reference_name.rs  repository_store.rs  tagged_semver.rs  traits.rs
src/git/git2_impl/: branch.rs  commit.rs  mod.rs  repository.rs  tag.rs
src/output/: dotenv.rs  file.rs  format.rs  json.rs  mod.rs  variable_provider.rs  variables.rs
src/semver/: build_metadata.rs  format_values.rs  mod.rs  pre_release_tag.rs  version.rs  version_field.rs
src/testing/: mod.rs  repository_fixture.rs  scenario_tests.rs
(+6 files in other folders)
