[package]
name = "gitversion"
version = "0.1.0"
edition = "2024"

[lib]
name = "gitversion"
path = "src/lib.rs"

[[bin]]
name = "gitversion"
path = "src/main.rs"

[dependencies]
bitflags = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.11"
eyre = "0.6"
figment = { version = "0.10", features = ["yaml", "env"] }
git2 = "0.20"
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rstest = "0.24"
tempfile = "3"
pretty_assertions = "1"
serial_test = "3"
